2011-09-08  Guillaume Lazzara  <z@lrde.epita.fr>

	* lrde-scmstats.sh: Do not change permissions.

2011-09-08  Guillaume Lazzara  <z@lrde.epita.fr>

	* lrde-scmstats.sh: New.

2011-09-08  Guillaume Lazzara  <z@lrde.epita.fr>

	* AUTHORS: Update.

2011-09-02  Guillaume Lazzara  <z@lrde.epita.fr>

	* configure.ac: Remove references to deprecated Makefiles.

2011-09-02  Guillaume Lazzara  <z@lrde.epita.fr>

	* build-aux/texi2dvi: Fix a regular expression.

2011-09-02  Guillaume Lazzara  <z@lrde.epita.fr>

	* NEWS: List changes for the next release.

2011-06-07  Guillaume Lazzara  <z@lrde.epita.fr>

	* configure.ac: Configure scribo/src/util.

2011-06-07  Guillaume Lazzara  <z@lrde.epita.fr>

	* configure.ac: Configure ICDAR contests directories.

2011-05-05  Guillaume Lazzara  <lazzara@fidji.lrde.epita.fr>

	* configure.ac: Configure scribo/tests/util.

2011-04-05  Guillaume Lazzara  <z@lrde.epita.fr>

	* configure.ac: Configure scribo/tests/estim.

2011-04-05  Guillaume Lazzara  <z@lrde.epita.fr>

	* configure.ac: Configure scribo/tests/primitive/extract.

2011-02-17  Guillaume Lazzara  <z@lrde.epita.fr>

	* build-aux/build_unit_test.sh: Define HAVE_* for unit-tests.

2011-02-17  Guillaume Lazzara  <z@lrde.epita.fr>

	* configure.ac: Configure scribo/src/primitive/remove.

2011-02-17  Guillaume Lazzara  <z@lrde.epita.fr>

	* configure.ac: Configure scribo/tests/convert.

2011-03-14  Thierry GERAUD  <thierry.geraud@lrde.epita.fr>

	* milena/mln/labeling/regional_maxima.hh
	(do_no_union_): Deactivate assertion since it is
	not verified for all cases.

2011-01-18  Guillaume Lazzara  <z@lrde.epita.fr>

	* configure.ac: Make Boost dependency optional.

2011-01-13  Guillaume Lazzara  <z@lrde.epita.fr>

	Add generic symbolic links to the latest snapshot.

	* lrde-upload.sh: Here.

2010-11-29  Roland Levillain  <roland@lrde.epita.fr>

	Honor `--without-qt' in configure.

	* m4/autotroll.m4: Here.

2010-11-05  Roland Levillain  <roland@lrde.epita.fr>
