@@ -1,0 +1,39 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:s
+# $Id$
+
+PortSystem          1.0
+
+name                @packagename@
+version             @version@
+categories          devel framework graphics science
+platforms           darwin
+license             GPL-2
+maintainers         Olena Team
+description         Software platform for efficient and generic image processing
+long_description    It is composed of a Generic and efficient C++ image \
+		            processing library, a framework for Document Image \
+		            Analysis and Python bindings.
+homepage            http://olena.lrde.epita.fr
+master_sites        http://www.lrde.epita.fr/dload/olena/
+
+checksums           md5     @package_md5@ \
+                    sha1    @package_sha1@ \
+                    rmd160  @package_rmd160@
+
+depends_lib         port:GraphicsMagick \
+                    port:tiff
+
+supported_archs     i386 x86_64
+
+variant scribo description {Add a DIA framework} {
+    depends_lib-append port:tesseract \
+    		       port:qt4-mac \
+                       port:fop
+    configure.args-append --enable-scribo
+}
+
+variant swilena description {Add Python bindings} {
+    configure.args-append --enable-swilena
+}
+
+default_variants    +scribo
