@@ -1,3 +1,11 @@
+2011-09-09  Guillaume Lazzara  <z@lrde.epita.fr>
+
+	Generate a valid Portfile for MacPorts support.
+
+	* Makefile.am: Add a rule to create a valid Portfile.
+
+	* distrib/macports/Portfile.in: New.
+
 2011-09-08  Guillaume Lazzara  <z@lrde.epita.fr>
 
 	* lrde-scmstats.sh: Do not change permissions.
